Added status to survey and respondent. Added url, user, password, and method to channels.

--- a/app/views/shared/_header_nav.haml
+++ b/app/views/shared/_header_nav.haml
@@ -6,3 +6,5 @@
           = link_to "Respondents", respondents_path
         %li{:class => params[:controller] == "quizzes" && "active"}
           = link_to "Questionaires", quizzes_path
+        %li{:class => params[:controller] == "channels" && "active"}
+          = link_to "Channels", channels_path
