--- a/app/views/channels/_form.html.haml
+++ b/app/views/channels/_form.html.haml
@@ -12,5 +12,17 @@
   .field
     = f.label :quiz
     = f.text_field :quiz
+  .field
+    = f.label :user
+    = f.text_field :user
+  .field
+    = f.label :password
+    = f.text_field :password
+  .field
+    = f.label :url
+    = f.text_field :url
+  .field
+    = f.label :method
+    = f.select :method, Channel.methods.keys
   .actions
     = f.submit 'Save'
