Fixing relations between quiz, question, survey and channel. Mostly on the UI

--- a/app/views/questions/_form.html.haml
+++ b/app/views/questions/_form.html.haml
@@ -14,6 +14,6 @@
     = f.text_area :text
   .field
     = f.label :quiz
-    = f.text_field :quiz
+    = f.select :quiz_id, @quizzes.map{|q| [q.name, q.id]}, { :prompt => "Please select"}
   .actions
     = f.submit 'Save'
