--- a/app/views/channels/index.html.haml
+++ b/app/views/channels/index.html.haml
@@ -13,7 +13,7 @@
     - @channels.each do |channel|
       %tr
         %td= channel.name
-        %td= channel.quiz
+        %td= channel.quiz.name
         %td= link_to 'Show', channel
         %td= link_to 'Edit', edit_channel_path(channel)
         %td= link_to 'Destroy', channel, :method => :delete, :data => { :confirm => 'Are you sure?' }
