--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -15,7 +15,7 @@
       %tr
         %td= question.name
         %td= question.text
-        %td= question.quiz
+        %td= question.quiz.name
         %td= link_to 'Show', question
         %td= link_to 'Edit', edit_question_path(question)
         %td= link_to 'Destroy', question, :method => :delete, :data => { :confirm => 'Are you sure?' }
