--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -8,7 +8,7 @@
   = @question.text
 %p
   %b Quiz:
-  = @question.quiz
+  = @question.quiz.name
 
 = link_to 'Edit', edit_question_path(@question)
 \|
