--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -13,8 +13,14 @@
   %b Survey:
   = @quiz.survey
 %p
-  %b Question:
-  = @quiz.question
+  %b Questions:
+  - if @quiz.questions.any?
+    - @quiz.questions.each do |question|
+      %p
+        = "#{question.name} : #{question.text}"
+  - else
+    %p
+      This Quiz has 0 questions
 
 = link_to 'Edit', edit_quiz_path(@quiz)
 \|
