--- a/app/views/quizzes/index.html.haml
+++ b/app/views/quizzes/index.html.haml
@@ -17,9 +17,9 @@
       %tr
         %td= quiz.name
         %td= quiz.description
-        %td= quiz.channel.any? ? quiz.channel.name : "No channel yet"
+        %td= quiz.channels.any? ? quiz.channels.map(&:name).join(' | ') : "No channel yet"
         %td= quiz.survey
-        %td= quiz.questions.map{|q| q.name}
+        %td= quiz.questions.map(&:name).join(' | ')
         %td= link_to 'Show', quiz
         %td= link_to 'Edit', edit_quiz_path(quiz)
         %td= link_to 'Destroy', quiz, :method => :delete, :data => { :confirm => 'Are you sure?' }
