--- a/app/views/channels/_form.html.haml
+++ b/app/views/channels/_form.html.haml
@@ -11,7 +11,7 @@
     = f.text_field :name
   .field
     = f.label :quiz
-    = f.text_field :quiz
+    = f.select :quiz_id, @quizzes.map{ |q| [q.name, q.id] }
   .field
     = f.label :user
     = f.text_field :user
