Adding Kind field to Question

--- a/app/views/questions/_form.html.haml
+++ b/app/views/questions/_form.html.haml
@@ -10,6 +10,9 @@
     = f.label :name
     = f.text_field :name
   .field
+    = f.label :kind
+    = f.select :kind, Question.kinds.keys
+  .field
     = f.label :text
     = f.text_area :text
   .field
