--- a/app/views/shared/_header_nav.haml
+++ b/app/views/shared/_header_nav.haml
@@ -5,7 +5,7 @@
         %li{:class => params[:controller] == "respondents" && "active"}
           = link_to "Respondents", respondents_path
         %li{:class => params[:controller] == "quizzes" && "active"}
-          = link_to "Questionaires", quizzes_path
+          = link_to "Questionnaires", quizzes_path
         %li{:class => params[:controller] == "channels" && "active"}
           = link_to "Channels", channels_path
         %li{:class => params[:controller] == "questions" && "active"}
