--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,6 @@
   %body
     %header
       = render "shared/header_nav"
-    %p(class="notice")= notice
-    %p(class="alert")= alert
+    %p.notice= notice
+    %p.alert= alert
     = yield
